# vgfx

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: full_quad.frag  full_quad.vert  tri.frag  tri.vert
include/: base.h  mLogger.h  vgfx.h
src/: example.c  main.c  vma_impl.cpp
